# tools_opam

./: .bazelignore  .bazelrc  .gitignore  BOOTSTRAPPING.md  BUILD.bazel  DESIGN.md  MODULE.bazel  NOTES.md  OPAM.md  README.adoc  README.md  TODO.md  WORKSPACE.bazel  WORKSPACE.bzl
bootstrap/: .gitignore  BUILD.bazel  BUILD.bzl  Makefile  README.md  ansi_colors.h  build.sh  clean.sh  config.c  driver.c  driver.h  emit_build_bazel.c  emit_build_bazel.h  emit_ocaml_repo.c  error_handler.c  frontend.c  help.c  lemon  makeheaders  meta_entries.c  meta_entries.h  meta_flags.c  meta_flags.h  meta_fs.c  meta_fs.h  meta_lexis.c  meta_lexis.re  meta_packages.c  meta_packages.h  meta_properties.c  meta_properties.h  meta_settings.c  meta_settings.h  meta_syntaxis.y  meta_values.c  meta_values.h  metalexer.c  metalexer.h  metalexer.re  metaparser.c  (+45 more)
bzl/debug/: BUILD.bazel
bzl/debug/trace/: BUILD.bazel
config/switch/: BUILD.bazel  coswitch.c  emit_ocamlsdk_repo.c  main.c
extensions/: BUILD.bazel  obazl.opamrc  opam.bzl  opam_checksums.bzl  opam_dep.bzl  opam_deps.bzl  opam_download_toolchain.bzl  opam_ops.bzl  opam_repo.bzl  opam_subrepo.bzl  opam_toolchain_global.bzl  opam_toolchain_local.bzl  opam_toolchain_opam.bzl  opam_toolchain_xdg.bzl  opam_utils.bzl
extensions/config/: BUILD.bazel  config_pkg.c  ext_emit_build_bazel.c  main.c
extensions/dbg/: BUILD.bazel  dbg_repo.bzl  dbg_runner.bzl  ocamldebug_runner.c
extensions/ocaml/: ocaml_repo.bzl  ocaml_runner.bzl
extensions/opam/: opam_checksums.bzl  opam_dep.bzl  opam_ops.bzl  opam_reconfig.c  opam_reinit.c  opam_repo.bzl  opam_runner.c  opam_subrepo.bzl  opam_toolchain_global.bzl  opam_toolchain_local.bzl  opam_toolchain_opam.bzl  opam_toolchain_xdg.bzl
extensions/utop/: utop_repo.bzl  utop_runner.c
here/: BUILD.bazel  clean.c  clone.c  create.c  export.c  expunge.c  here.c  import.c  list.c  refresh.c  reinit.c  set.c  test.c
here/config/: BUILD.bazel  config.c
here/export/: BUILD.bazel  export.c
here/import/: BUILD.bazel
here/init/: BUILD.bazel
here/install/: BUILD.bazel
here/opam/: BUILD.bazel  init.c  install.c  opam.c  remove.c
here/remove/: BUILD.bazel
here/show/: BUILD.bazel  show.c
here/status/: BUILD.bazel
ingest/: BUILD.bazel
init/: BUILD.bazel  init.c
install/: BUILD.bazel  install.c  install.sh
lib/: BUILD.bazel  BUILD.bzl  dune-package.c  emit_build_bazel.c  emit_ocaml_repo.c  emit_ocamlsdk.c  emit_pkg_bindir.c  registry.c  spawn_cmd.c  utils.c  versions.c
lib/templates/: BUILD.bazel  bazel_wrapper.sh
lib/templates/compiler_libs/: BUILD.bazel  bytecomp.BUILD  bytecomp.BUILD.c  common.BUILD  common.BUILD.c  native_toplevel.BUILD  native_toplevel.BUILD.c  optcomp.BUILD  optcomp.BUILD.c  toplevel.BUILD  toplevel.BUILD.c
lib/templates/ocamlsdk/: BUILD.bazel  bigarray.BUILD  bigarray.BUILD.c  bigarray.BUILDX  bigarray_alias.BUILD  bigarray_alias.BUILD.c  c_ffi.BUILD  c_ffi.BUILD.c  compiler_libs.BUILD  compiler_libs.BUILD.c  compiler_libs_alias.BUILD  compiler_libs_alias.BUILD.c  compiler_libs_bytecomp.BUILD  compiler_libs_bytecomp.BUILD.c  compiler_libs_common.BUILD  compiler_libs_common.BUILD.c  compiler_libs_native_toplevel.BUILD  compiler_libs_native_toplevel.BUILD.c  compiler_libs_optcomp.BUILD  compiler_libs_optcomp.BUILD.c  compiler_libs_toplevel.BUILD  compiler_libs_toplevel.BUILD.c  config.BUILD  config.BUILD.c  dynlink.BUILD  dynlink.BUILD.c  dynlink_alias.BUILD  dynlink_alias.BUILD.c  num.BUILD  num.BUILD.c  ocamldoc.BUILD  ocamldoc.BUILD.c  profiling.BUILD  profiling.BUILD.c  rtevents.BUILD  rtevents.BUILD.c  rtevents_alias.BUILD  rtevents_alias.BUILD.c  runtime.BUILD  runtime.BUILD.c  (+28 more)
local/: BUILD.bazel  BUILD.bzl  clean.c  export.c  import.c  init.c  list.c  local.c  refresh.c  set.c
man/: BUILD.bazel  README  coswitch.obazl  man.c
man/man1/: @opam.1  @opam_coswitch.1  @opam_coswitch_list.1  @opam_coswitch_refresh.1  @opam_coswitch_remove.1  @opam_coswitch_set.1  @opam_here.1  @opam_here_clean.1  @opam_here_clone.1  @opam_here_create.1  @opam_here_export.1  @opam_here_expunge.1  @opam_here_import.1  @opam_here_list.1  @opam_here_opam.1  @opam_here_opam_init.1  @opam_here_opam_install.1  @opam_here_opam_remove.1  @opam_here_refresh.1  @opam_here_reinit.1  @opam_here_set.1  @opam_local.1  @opam_local_clean.1  @opam_local_export.1  @opam_local_import.1  @opam_local_init.1  @opam_local_list.1  @opam_local_refresh.1  @opam_local_set.1  @opam_man.1  @opam_shared_refresh.1  BUILD.bazel
opam/: BUILD.bazel  bootstrap.bzl  functions.bzl  providers.bzl  rules.bzl
opam/_bootstrap/: BUILD.bazel  opam.bzl  opam_boot.sh  opam_ocamlfind.bzl  switch.bzl
opam/_debug/: utils.bzl
opam/_functions/: BUILD.bazel  opam_cmds.bzl  opam_pinning.bzl  opam_queries.bzl  ppx.bzl  xdg.bzl
opam/_providers/: BUILD.bazel  opam.bzl
opam/_repo_rules/: bigarray.BUILD  toolchain.bzl
opam/_rules/: findlib.bzl  opam_bootstrap.bzl  opam_cfg.bzl  opam_repository.bzl  opampkg.bzl  repo_rules.bzl
opam/_templates/: BUILD.opam  BUILD.opam.lib.digestif  BUILD.opam.lib.digestif_c  BUILD.opam.lib.digestif_rakia  BUILD.opam.lib.ptime.clock.os  BUILD.opam.lib.threads  BUILD.opam.lib.threads.posix  ocaml.bigarray.REPO  ocaml.compiler-libs.REPO  ocaml.dynlink.REPO  ocaml.str.REPO  ocaml.threads.REPO  ocaml.unix.REPO  opam.BUILD.bazel  opam.findlib.BUILD.bazel  opam.pkg.BUILD.bazel  opam_switch.BUILD.bazel
remove/: BUILD.bazel  remove.c
shared/: BUILD.bazel  coswitch.c  refresh.c  remove.c  set.c
status/: BUILD.bazel  status.c
tc/: BUILD.bazel  README
tc/bc/: BUILD.bazel
tc/emitter/: BUILD.bazel
tc/n/: BUILD.bazel
test/: BUILD.bazel  build.opam  build_filter.opam  deps.opam  filters.opam  fpf.opam  fvf.opam  opam_lex.c  opam_parse.c  ppxlib.opam  yojson.opam
test/data/: BUILD.bazel  base.dune-package  cppo.dune-package  cstruct.dune-package  ctypes.dune-package  menhir.dune-package  menhirLib.dune-package  ppx_expect.dune-package  ppx_inline_test.dune-package
test/dune/: BUILD.bazel  dune_pkg_test.c  test_init.c
toolchain/: BUILD.bazel  BUILD.bzl
update/: BUILD.bazel  update.c
(+125 files in other folders)
