module(
    name = "tools_opam",
    version = "5.0.0",
    compatibility_level = 5,
    bazel_compatibility = [">=8.0.0"]
)

## bcr:
bazel_dep(name = "platforms",      version = "0.0.11")
bazel_dep(name = "bazel_skylib",   version = "1.7.1")
bazel_dep(name = "rules_cc",       version = "0.0.17")

## obazl
bazel_dep(name = "rules_ocaml",     version = "5.0.0")
bazel_dep(name = "obazl_config_cc", version = "3.0.0")
bazel_dep(name = "findlibc",        version = "3.0.0")
bazel_dep(name = "opamc",           version = "3.0.0")
bazel_dep(name = "xdgc",            version = "3.0.0")

## 3rd party
bazel_dep(name = "gopt",            version = "10.0.0.bzl.8")
bazel_dep(name = "liblogc",         version = "3.0.0")
bazel_dep(name = "makeheaders",     version = "3.0.0")
bazel_dep(name = "sfsexp",          version = "1.4.1.bzl.8")
bazel_dep(name = "uthash",          version = "2.3.0.bzl.8")

## test
bazel_dep(name = "runfiles",        version = "3.0.0",
          dev_dependency = True)
bazel_dep(name = "unity",           version = "2.6.1.bzl",
          dev_dependency = True)

# bazel_dep(name = "cwalk",           version = "1.2.9")
# bazel_dep(name = "dune_s7",         version = "3.0.0")
# bazel_dep(name = "libs7",           version = "3.0.0")
# bazel_dep(name = "coswitch",        version = "5.0.0")
# bazel_dep(name = "mustachios",      version = "3.0.0")
