workspace(name = "opam")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//:WORKSPACE.bzl", "fetch_repos")
fetch_repos()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

# load("@rules_foreign_cc//foreign_cc:repositories.bzl",
#      "rules_foreign_cc_dependencies")

# rules_foreign_cc_dependencies(
#     # register_preinstalled_tools = False
#     # register_built_tools=False
# )

load("@libs7//:WORKSPACE.bzl", libs7_fetch_repos = "cc_fetch_repos")
libs7_fetch_repos()

## rule documentation
# load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")
# stardoc_repositories()

# load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
# load("@rules_ocaml//cfg/ocaml:bootstrap.bzl",
#      "ocaml_configure",
#      "ocaml_register_toolchains",
#      "ocaml_toolchain")

# ocaml_configure(switch = "4.10",
#                 # debug = True,
#                 bootstrap_debug=True) ## case 1


# if bootstrap:
#     bootstrap_register_toolchains(installation="host")

## NB: really means "register toolchain _bindings_"
# register_toolchains("//:ocaml_macos")

################################################################
# ## to use the llvm toolchain (https://github.com/grailbio/bazel-toolchain):
# BAZEL_TOOLCHAIN_TAG = "0.7.2"
# BAZEL_TOOLCHAIN_SHA = "f7aa8e59c9d3cafde6edb372d9bd25fb4ee7293ab20b916d867cd0baaa642529"

# http_archive(
#     name = "com_grail_bazel_toolchain",
#     sha256 = BAZEL_TOOLCHAIN_SHA,
#     strip_prefix = "bazel-toolchain-{tag}".format(tag = BAZEL_TOOLCHAIN_TAG),
#     canonical_id = BAZEL_TOOLCHAIN_TAG,
#     url = "https://github.com/grailbio/bazel-toolchain/archive/{tag}.tar.gz".format(tag = BAZEL_TOOLCHAIN_TAG),
# )
# load("@com_grail_bazel_toolchain//toolchain:deps.bzl",
#      "bazel_toolchain_dependencies")
# bazel_toolchain_dependencies()
# load("@com_grail_bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")
# llvm_toolchain(name = "llvm_toolchain", llvm_version = "14.0.0")
# load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")
# llvm_register_toolchains()

## end llvm ##
################################################################

