load("@bazel_skylib//rules:common_settings.bzl", "string_list_flag")
load(":BUILD.bzl", "gensyntax")

exports_files([
    "log.c", "log.h", "utarray.h", "uthash.h", "utstring.h"
])

## to enable parser/lexer debugging pass --//sealark:debug=bindings,vectors,...
string_list_flag(name = "yydebug", build_setting_default = [])
config_setting(name = "yydebug-dicts", flag_values = {":yydebug": "dicts"})
config_setting(name = "yydebug-targets", flag_values = {":yydebug": "targets"})
config_setting(name = "yydebug-loads", flag_values = {":yydebug": "loads"})
config_setting(name = "yydebug-vectors", flag_values = {":yydebug": "vectors"})

##########
cc_library(
    name  = "bootstrap",
    alwayslink = True,
    # linkstatic = 1,
    srcs  = [
        "config.c",
        "config.h",
        "driver.c",
        "driver.h",
        "frontend.c",
        "frontend.h",
        "emit_build_bazel.c",
        "emit_build_bazel.h",
        "meta_entries.c",
        "meta_entries.h",
        "meta_flags.c",
        "meta_flags.h",
        "meta_fs.c",
        "meta_fs.h",
        "meta_packages.c",
        "meta_packages.h",
        "meta_properties.c",
        "meta_properties.h",
        "meta_settings.c",
        "meta_settings.h",
        "meta_values.c",
        "meta_values.h",
        # "meta_lexis.c",
        # "meta_lexis.h",
        # "meta_syntaxis.c",
        # "meta_syntaxis.h",
        "obazl.c",
        "obazl.h",
        "opam.c",
        "opam.h",
        "opam_config.c",
        "opam_config.h",
        "opam_deps.c",
        "opam_deps.h",
        "opam_import.c",
        "opam_import.h",
        "opam_init_here.h",
        "opam_init_here.c",
        "opam_status.c",
        "opam_status.h",

        "run_cmd.c",
        "run_cmd.h",

        "log.c",
        "log.h",
        "utarray.h",
        "uthash.h",
        "utstring.h",
    ],
    hdrs = [
        "bootstrap.h",
        "utarray.h",
        "uthash.h",
        "utstring.h",
    ],
    defines = select({
        "//bzl/host:debug": [], # "DEBUG_TRACE"],
        "//conditions:default":   [], ##"DEBUG_DUMP"]
    }),
    copts = [
        "-std=c11",
        "-pedantic-errors",

        "-UDEBUG", # FIXME: macos fastbuild only

        ## NB: we need '-I.' because re2c will this into meta_syntaxis.c:
        ## #include "bazel-out/darwin-fastbuild/bin/external/opam/bootstrap/meta_syntaxis.h"
        "-I.",


        "-Ibootstrap",
        "-I$(GENDIR)/bootstrap",

        # "-I$(GENDIR)/opam/bootstrap",

        ## WARNING: importing this repo under any name other than
        ## 'opam' with break this:
        "-Iexternal/opam/bootstrap",
        "-I$(GENDIR)/external/opam/bootstrap",

        "-Iexternal/libinih",
    ],
    deps = [
        ":meta_lexis",
        ":meta_syntaxis",
        ":opam_syntaxis",
        "//external/libinih:inih",
    ],
    visibility = ["//visibility:public"]
)

###########
cc_library(
    name = "meta_syntaxis",
    srcs = [
        "meta_syntaxis.c",
        "meta_syntaxis.h",
        "log.h",
        "utarray.h",
        "uthash.h",
        "utstring.h",
        ],
    # alwayslink = True,
    copts = [
        "-I.",
        "-Ibootstrap",
        "-Iopam/bootstrap",
        "-Iexternal/opam/bootstrap",
        "-I$(GENDIR)/external/opam/bootstrap",

    ],
    deps = ["opam_lexer"],
    visibility = ["//test:__subpackages__"]
)

########
gensyntax(
    name = "gensyntaxis",
    yy   = "meta_syntaxis.y",
    outs = ["meta_syntaxis.c","meta_syntaxis.out"],
    defines = select({
        ":yydebug-vectors": ["YYDEBUG_VECTORS"],
        "//conditions:default":   []
    }) + select({
        ":yydebug-dicts": ["YYDEBUG_DICTS"],
        "//conditions:default":   []
    }) + select({
        ":yydebug-targets": ["YYDEBUG_TARGETS"],
        "//conditions:default":   []
    }) + select({
        ":yydebug-loads": ["YYDEBUG_LOADSTMTS"],
        "//conditions:default":   []
    })
)

###########
cc_library(
    name = "meta_lexis",
    srcs = [
        # "meta_lexer.c", "meta_lexer.h",
        "meta_lexis.c", "meta_lexis.h",
        "log.c", "log.h",
        "utarray.h",
        "uthash.h",
        "utstring.h",
    ],
    # alwayslink = True,
    hdrs = [
        "log.h",
        # "meta_lexer.h"
    ],
    copts = [
        "-Ibootstrap",
        "-Iopam/bootstrap",
        "-I$(GENDIR)/bootstrap",
        "-I$(GENDIR)/opam/bootstrap",
        "-I$(GENDIR)/external/opam/bootstrap"
    ],
    visibility = ["//test:__subpackages__"]
)

########
## re2c takes a long time to build. we do not need to run it every
## time once the grammar is stable, so we put the .c file under
## version control
genrule(
    name = "gen_meta_lexis",
    srcs = [
        "meta_lexis.re",
    ],
    tools = ["@opam_re2c//:re2c"],
    outs  = [
        "meta_lexis.c"
    ],
    cmd   = "\n".join([
        "for f in $(locations @opam_re2c//:re2c)",
        "do",
        "    if [ -f $$f ]",
        "    then",
        "        if [ re2c = `basename $$f` -a -x $$f ]",
        "        then",
        "            break",
        "        fi",
        "    fi",
        "done",
        "$$f --conditions --tags -o $(@D)/meta_lexis.c $(location meta_lexis.re)",
    ]),
    visibility = ["//visibility:public"]
)

################################################################
####    OPAM Parser
################################################################
cc_library(
    name = "opam_syntaxis",
    srcs = [
        "opam_syntaxis.c",
        "opam_syntaxis.h",
        "log.h",
        "utarray.h",
        "uthash.h",
        "utstring.h",
        ],
    # alwayslink = True,
    copts = [
        "-I.",
        "-Ibootstrap",
        "-Iopam/bootstrap",
        "-Iexternal/opam/bootstrap",
        "-I$(GENDIR)/external/opam/bootstrap",

    ],
    deps = ["opam_lexer"],
    visibility = ["//test:__subpackages__"]
)

gensyntax(
    name = "gen_opam_syntaxis",
    yy   = "opam_syntaxis.y",
    outs = ["opam_syntaxis.c","opam_syntaxis.out"],
    defines = select({
        ":yydebug-vectors": ["YYDEBUG_VECTORS"],
        "//conditions:default":   []
    }) + select({
        ":yydebug-dicts": ["YYDEBUG_DICTS"],
        "//conditions:default":   []
    }) + select({
        ":yydebug-targets": ["YYDEBUG_TARGETS"],
        "//conditions:default":   []
    }) + select({
        ":yydebug-loads": ["YYDEBUG_LOADSTMTS"],
        "//conditions:default":   []
    })
)

###########
cc_library(
    name = "opam_lexer",
    srcs = [
        "opam_lexer.c", "opam_lexer.h",
        "opam_lexis.c", "opam_lexis.h",
        "log.c", "log.h",
        "utarray.h",
        "uthash.h",
        "utstring.h",
    ],
    hdrs = [
        "log.h",
        "opam_lexer.h"
    ],
    # alwayslink = True,
    copts = [
        "-Ibootstrap",
        "-Iopam/bootstrap",
        "-I$(GENDIR)/bootstrap",
        "-I$(GENDIR)/opam/bootstrap",
        "-I$(GENDIR)/external/opam/bootstrap"
    ],
    visibility = ["//test:__subpackages__"]
)

genrule(
    name = "gen_opam_lexis",
    outs  = ["opam_lexis.c"],
    srcs = ["opam_lexis.re"],
    tools = ["@opam_re2c//:re2c"],
    cmd   = "\n".join([
        "for f in $(locations @opam_re2c//:re2c)",
        "do",
        "    if [ -f $$f ]",
        "    then",
        "        if [ re2c = `basename $$f` -a -x $$f ]",
        "        then",
        "            break",
        "        fi",
        "    fi",
        "done",
        "$$f --conditions --tags -o $(@D)/opam_lexis.c $(location opam_lexis.re)",
    ]),
    visibility = ["//visibility:public"]
)

genrule(
    name = "lex_mkhdrs",
    srcs = [
        "opam_lexer.c",
        "opam_lexis.c",
        "opam_syntaxis.c",
    ],
    outs = [
        "opam_lexer.h",
        "opam_lexis.h",
        "opam_syntaxis.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location opam_lexer.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location :makeheaders) \\",
        "    $(location opam_lexer.c) \\",
        "    $(location opam_lexis.c) \\",
        "    $(location opam_syntaxis.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = [":makeheaders"],
    visibility = ["//visibility:public"]
)

################################################################

########
genrule(
    name = "mkhdrs",
    srcs = [
        "config.c",
        "driver.c",
        "frontend.c",
        "emit_build_bazel.c",
        "meta_entries.c",
        "meta_flags.c",
        "meta_fs.c",
        "meta_packages.c",
        "meta_properties.c",
        "meta_settings.c",
        "meta_values.c",
        "meta_lexis.c",
        "meta_syntaxis.c",
        "obazl.c",
        "opam.c",
        "opam_config.c",
        "opam_deps.c",
        "opam_import.c",
        "opam_init_here.c",
        "opam_status.c",
        "run_cmd.c"
    ],
    outs = [
        "config.h",
        "driver.h",
        "frontend.h",
        "emit_build_bazel.h",
        "meta_entries.h",
        "meta_flags.h",
        "meta_fs.h",
        "meta_packages.h",
        "meta_properties.h",
        "meta_settings.h",
        "meta_values.h",
        "meta_lexis.h",
        "meta_syntaxis.h",
        "obazl.h",
        "opam.h",
        "opam_config.h",
        "opam_deps.h",
        "opam_import.h",
        "opam_init_here.h",
        "opam_status.h",
        "run_cmd.h"
    ],
    cmd = "\n".join([
        "SRC1=$(location config.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location :makeheaders) \\",
        "    $(location config.c) \\",
        "    $(location driver.c) \\",
        "    $(location frontend.c) \\",
        "    $(location emit_build_bazel.c) \\",
        "    $(location meta_entries.c) \\",
        "    $(location meta_flags.c) \\",
        "    $(location meta_fs.c) \\",
        "    $(location meta_packages.c) \\",
        "    $(location meta_properties.c) \\",
        "    $(location meta_settings.c) \\",
        "    $(location meta_values.c) \\",
        "    $(location meta_lexis.c) \\",
        "    $(location meta_syntaxis.c) \\",
        "    $(location obazl.c) \\",
        "    $(location opam.c) \\",
        "    $(location opam_config.c) \\",
        "    $(location opam_deps.c) \\",
        "    $(location opam_import.c) \\",
        "    $(location opam_init_here.c) \\",
        "    $(location opam_status.c) \\",
        "    $(location run_cmd.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = [":makeheaders"],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs-export",
    srcs = [
        "config.c",
        "driver.c",
        "frontend.c",
        "emit_build_bazel.c",
        "meta_entries.c",
        "meta_flags.c",
        "meta_fs.c",
        "meta_packages.c",
        "meta_properties.c",
        "meta_settings.c",
        "meta_values.c",
        "meta_lexis.c",
        "meta_syntaxis.c",
        "obazl.c",
        "opam.c",
        "opam_config.c",
        "opam_deps.c",
        "opam_import.c",
        "opam_init_here.c",
        "opam_status.c",
        "run_cmd.c"
    ],
    outs = [
        "bootstrap.h"
    ],
    cmd = "\n".join([
        "SRC1=$(location opam.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location :makeheaders) -H \\",
        "    $(location config.c) \\",
        "    $(location driver.c) \\",
        "    $(location frontend.c) \\",
        "    $(location emit_build_bazel.c) \\",
        "    $(location meta_entries.c) \\",
        "    $(location meta_flags.c) \\",
        "    $(location meta_fs.c) \\",
        "    $(location meta_packages.c) \\",
        "    $(location meta_properties.c) \\",
        "    $(location meta_settings.c) \\",
        "    $(location meta_values.c) \\",
        "    $(location meta_lexis.c) \\",
        "    $(location meta_syntaxis.c) \\",
        "    $(location obazl.c) \\",
        "    $(location opam.c) \\",
        "    $(location opam_config.c) \\",
        "    $(location opam_deps.c) \\",
        "    $(location opam_import.c) \\",
        "    $(location opam_init_here.c) \\",
        "    $(location opam_status.c) \\",
        "    $(location run_cmd.c) \\",
        "> $@"
    ]),
    tools = [":makeheaders"],
    visibility = ["//visibility:public"]
)

################################################################
#### TOOLS

cc_binary(
    name  = "lemon",
    srcs  = ["lemon.c"],
)

cc_binary(
    name  = "makeheaders",
    srcs  = ["makeheaders.c"],
    copts = ["-O3"],
    linkstatic=1,
    visibility = [
        "//ingest:__pkg__",
        "//init:__pkg__",
        "//install:__pkg__",
        "//status:__pkg__",
        "//test:__subpackages__",
        "//update:__pkg__"
    ]
)
